# RtmpBiliBili

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/diaochan/rtmpbilibili/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/diaochan/rtmpbilibili/: App.java  AudioCodec.java  LiveTaskManager.java  LogUtil.java  MainActivity.java  RtmpPackage.java  ScreenLive.java  VideoCodec.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/diaochan/rtmpbilibili/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
